core/api/mblink.h


typedef struct MBlinkWindow* MBlinkHandle;
typedef enum {
    MBLINK_TYPE_NULL = 0,
    MBLINK_TYPE_BOOL = 1,
    MBLINK_TYPE_INT = 2,
    MBLINK_TYPE_DOUBLE = 3,
    MBLINK_TYPE_STRING = 4,
    MBLINK_TYPE_ARRAY = 5,
    MBLINK_TYPE_OBJECT = 6
} MBlinkType;
typedef enum {
    MBLINK_OBSERVE_CONSOLE = 1,
    MBLINK_OBSERVE_ERROR = 2
} MBlinkObserveKind;
typedef char* (*MBlinkCallback)(const char* args_json, void* user_data);
typedef void (*MBlinkStateCallback)(const char* name, const char* value_json,
                                     void* user_data);
typedef void (*MBlinkResizeCallback)(int width, int height, void* user_data);
typedef void (*MBlinkVoidCallback)(void* user_data);
typedef bool (*MBlinkBoolCallback)(void* user_data);
typedef void (*MBlinkUpdateCallback)(float delta_time, void* user_data);
typedef void (*MBlinkObserveCallback)(MBlinkObserveKind kind,
                                     const char* entry_json,
                                     void* user_data);
MBLINK_API int mblink_set_title(MBlinkHandle handle, const char* title);
MBLINK_API int mblink_tray_create(MBlinkHandle handle, const char* tooltip);
MBLINK_API int mblink_tray_destroy(MBlinkHandle handle);
MBLINK_API int mblink_tray_set_tooltip(MBlinkHandle handle, const char* tooltip);
MBLINK_API int mblink_tray_set_menu(MBlinkHandle handle, const char* menu_json);
MBLINK_API int mblink_tray_set_left_click_callback(MBlinkHandle handle,
                                                 MBlinkVoidCallback callback,
                                                 void* user_data);
MBLINK_API int mblink_tray_set_menu_callback(MBlinkHandle handle,
                                           MBlinkCallback callback,
                                           void* user_data);
MBLINK_API int mblink_set_size(MBlinkHandle handle, int width, int height);
MBLINK_API int mblink_get_size(MBlinkHandle handle, int* width, int* height);
MBLINK_API int mblink_set_position(MBlinkHandle handle, int x, int y);
MBLINK_API int mblink_get_position(MBlinkHandle handle, int* x, int* y);
MBLINK_API int mblink_set_min_size(MBlinkHandle handle, int width, int height);
MBLINK_API int mblink_set_max_size(MBlinkHandle handle, int width, int height);
MBLINK_API int mblink_minimize(MBlinkHandle handle);
MBLINK_API int mblink_maximize(MBlinkHandle handle);
MBLINK_API int mblink_restore(MBlinkHandle handle);
MBLINK_API int mblink_show(MBlinkHandle handle);
MBLINK_API int mblink_hide(MBlinkHandle handle);
MBLINK_API int mblink_set_fullscreen(MBlinkHandle handle, bool fullscreen);
MBLINK_API int mblink_set_resizable(MBlinkHandle handle, bool resizable);
MBLINK_API int mblink_set_borderless(MBlinkHandle handle, bool borderless);
MBLINK_API int mblink_set_always_on_top(MBlinkHandle handle, bool on_top);
MBLINK_API int mblink_load_html(MBlinkHandle handle, const char* html);
MBLINK_API int mblink_load_html_file(MBlinkHandle handle, const char* filepath);
MBLINK_API int mblink_eval_js(MBlinkHandle handle, const char* js_code);
MBLINK_API int mblink_eval_module(MBlinkHandle handle, const char* code,
                                    const char* filename);
MBLINK_API int mblink_load_js_file(MBlinkHandle handle, const char* filepath);
MBLINK_API int mblink_load_bytecode(MBlinkHandle handle, const void* data,
                                      size_t size);
MBLINK_API int mblink_compile_resources(const char* input_path,
                                      const char* output_file,
                                      const char* encryption_key);
MBLINK_API int mblink_load_resource_file(const char* package_file,
                                       const char* resource_path,
                                       const char* encryption_key,
                                       void** out_data,
                                       size_t* out_size,
                                       uint32_t* out_flags);
MBLINK_API int mblink_mount_resource_package(MBlinkHandle handle,
                                           const char* package_file,
                                           const char* encryption_key,
                                           const char* mount_point);
MBLINK_API int mblink_bind(MBlinkHandle handle, const char* name,
                             MBlinkCallback callback, void* user_data);
MBLINK_API void mblink_unbind(MBlinkHandle handle, const char* name);
MBLINK_API int mblink_on_resize(MBlinkHandle handle, MBlinkResizeCallback callback, void* user_data);
MBLINK_API int mblink_on_close_request(MBlinkHandle handle, MBlinkBoolCallback callback, void* user_data);
MBLINK_API int mblink_on_close(MBlinkHandle handle, MBlinkVoidCallback callback, void* user_data);
MBLINK_API int mblink_on_focus(MBlinkHandle handle, MBlinkVoidCallback callback, void* user_data);
MBLINK_API int mblink_on_blur(MBlinkHandle handle, MBlinkVoidCallback callback, void* user_data);
MBLINK_API int mblink_on_update(MBlinkHandle handle, MBlinkUpdateCallback callback, void* user_data);
MBLINK_API int mblink_emit(MBlinkHandle handle, const char* event_name,
                             const char* data_json);
MBLINK_API int mblink_observe_set_callback(MBlinkHandle handle,
                                         MBlinkObserveCallback callback,
                                         void* user_data);
MBLINK_API int mblink_observe_console_json(MBlinkHandle handle, char** out_json);
MBLINK_API int mblink_observe_errors_json(MBlinkHandle handle, char** out_json);
MBLINK_API int mblink_observe_lifecycle_json(MBlinkHandle handle, char** out_json);
MBLINK_API int mblink_observe_clear(MBlinkHandle handle, MBlinkObserveKind kind);
MBLINK_API int mblink_state_create_null(MBlinkHandle handle,
                                          const char* name);
MBLINK_API int mblink_state_create_bool(MBlinkHandle handle,
                                          const char* name, bool value);
MBLINK_API int mblink_state_create_int(MBlinkHandle handle, const char* name,
                                         int64_t value);
MBLINK_API int mblink_state_create_double(MBlinkHandle handle,
                                            const char* name, double value);
MBLINK_API int mblink_state_create_string(MBlinkHandle handle,
                                            const char* name,
                                            const char* value);
MBLINK_API int mblink_state_create_array(MBlinkHandle handle,
                                           const char* name);
MBLINK_API int mblink_state_create_object(MBlinkHandle handle,
                                            const char* name);
MBLINK_API int mblink_state_create_json(MBlinkHandle handle,
                                          const char* name, const char* json);
MBLINK_API bool mblink_state_exists(MBlinkHandle handle, const char* name);
MBLINK_API MBlinkType mblink_state_type(MBlinkHandle handle,
                                           const char* name);
MBLINK_API void mblink_state_delete(MBlinkHandle handle, const char* name);
MBLINK_API bool mblink_state_get_bool(MBlinkHandle handle, const char* name);
MBLINK_API int64_t mblink_state_get_int(MBlinkHandle handle,
                                          const char* name);
MBLINK_API double mblink_state_get_double(MBlinkHandle handle,
                                            const char* name);
MBLINK_API const char* mblink_state_get_string(MBlinkHandle handle,
                                                 const char* name);
MBLINK_API int mblink_state_get_length(MBlinkHandle handle,
                                         const char* name);
MBLINK_API char* mblink_state_get_json(MBlinkHandle handle,
                                         const char* name);
MBLINK_API char* mblink_state_get_at(MBlinkHandle handle, const char* name,
                                       int index);
MBLINK_API char* mblink_state_get_key(MBlinkHandle handle, const char* name,
                                        const char* key);
MBLINK_API int mblink_state_set_null(MBlinkHandle handle, const char* name);
MBLINK_API int mblink_state_set_bool(MBlinkHandle handle, const char* name,
                                       bool value);
MBLINK_API int mblink_state_set_int(MBlinkHandle handle, const char* name,
                                      int64_t value);
MBLINK_API int mblink_state_set_double(MBlinkHandle handle, const char* name,
                                         double value);
MBLINK_API int mblink_state_set_string(MBlinkHandle handle, const char* name,
                                         const char* value);
MBLINK_API int mblink_state_set_json(MBlinkHandle handle, const char* name,
                                       const char* json);
MBLINK_API int mblink_state_array_push(MBlinkHandle handle, const char* name,
                                         const char* item_json);
MBLINK_API int mblink_state_array_push_int(MBlinkHandle handle,
                                             const char* name, int64_t value);
MBLINK_API int mblink_state_array_push_double(MBlinkHandle handle,
                                                const char* name, double value);
MBLINK_API int mblink_state_array_push_string(MBlinkHandle handle,
                                                const char* name,
                                                const char* value);
MBLINK_API int mblink_state_array_push_bool(MBlinkHandle handle,
                                              const char* name, bool value);
MBLINK_API int mblink_state_array_pop(MBlinkHandle handle, const char* name);
MBLINK_API int mblink_state_array_shift(MBlinkHandle handle,
                                          const char* name);
MBLINK_API int mblink_state_array_unshift(MBlinkHandle handle,
                                            const char* name,
                                            const char* item_json);
MBLINK_API int mblink_state_array_remove(MBlinkHandle handle,
                                           const char* name, int index);
MBLINK_API int mblink_state_array_clear(MBlinkHandle handle,
                                          const char* name);
MBLINK_API int mblink_state_array_set(MBlinkHandle handle, const char* name,
                                        int index, const char* item_json);
MBLINK_API int mblink_state_array_set_int(MBlinkHandle handle,
                                            const char* name, int index,
                                            int64_t value);
MBLINK_API int mblink_state_array_set_double(MBlinkHandle handle,
                                               const char* name, int index,
                                               double value);
MBLINK_API int mblink_state_array_set_string(MBlinkHandle handle,
                                               const char* name, int index,
                                               const char* value);
MBLINK_API int mblink_state_object_set(MBlinkHandle handle, const char* name,
                                         const char* key,
                                         const char* value_json);
MBLINK_API int mblink_state_object_set_int(MBlinkHandle handle,
                                             const char* name, const char* key,
                                             int64_t value);
MBLINK_API int mblink_state_object_set_double(MBlinkHandle handle,
                                                const char* name,
                                                const char* key, double value);
MBLINK_API int mblink_state_object_set_string(MBlinkHandle handle,
                                                const char* name,
                                                const char* key,
                                                const char* value);
MBLINK_API int mblink_state_object_set_bool(MBlinkHandle handle,
                                              const char* name, const char* key,
                                              bool value);
MBLINK_API int mblink_state_object_remove(MBlinkHandle handle,
                                            const char* name, const char* key);
MBLINK_API int mblink_state_object_clear(MBlinkHandle handle,
                                           const char* name);
MBLINK_API int mblink_state_increment(MBlinkHandle handle, const char* name,
                                        double delta);
MBLINK_API int mblink_state_multiply(MBlinkHandle handle, const char* name,
                                       double factor);
MBLINK_API int mblink_state_string_append(MBlinkHandle handle,
                                            const char* name,
                                            const char* suffix);
MBLINK_API int mblink_state_string_prepend(MBlinkHandle handle,
                                             const char* name,
                                             const char* prefix);
MBLINK_API int mblink_state_watch(MBlinkHandle handle, const char* name,
                                    MBlinkStateCallback callback,
                                    void* user_data);
MBLINK_API void mblink_state_unwatch(MBlinkHandle handle, int watch_id);
MBLINK_API void mblink_state_batch_begin(MBlinkHandle handle);
MBLINK_API void mblink_state_batch_end(MBlinkHandle handle);
MBLINK_API void mblink_state_set_merge_mode(MBlinkHandle handle,
                                              bool enable);
MBLINK_API int mblink_process_queue(MBlinkHandle handle);
MBLINK_API int mblink_queue_size(MBlinkHandle handle);
typedef struct MBlinkSharedObject* MBlinkSharedHandle;
MBLINK_API MBlinkSharedHandle mblink_shared_create(MBlinkHandle handle,
                                                       const char* name);
MBLINK_API void mblink_shared_destroy(MBlinkSharedHandle shared);
MBLINK_API char* mblink_copy_string(const char* str);
MBLINK_API void mblink_free(void* ptr);
MBLINK_API const char* mblink_last_error(void);