bindings/python/mblink/_ffi.py


    # 窗口属性
    lib.mblink_set_title.restype = c_int
    lib.mblink_set_title.argtypes = [H, c_char_p]
    lib.mblink_tray_create.restype = c_int
    lib.mblink_tray_create.argtypes = [H, c_char_p]
    lib.mblink_tray_destroy.restype = c_int
    lib.mblink_tray_destroy.argtypes = [H]
    lib.mblink_tray_set_tooltip.restype = c_int
    lib.mblink_tray_set_tooltip.argtypes = [H, c_char_p]
    lib.mblink_tray_set_menu.restype = c_int
    lib.mblink_tray_set_menu.argtypes = [H, c_char_p]
    lib.mblink_tray_set_left_click_callback.restype = c_int
    lib.mblink_tray_set_left_click_callback.argtypes = [H, MBlinkVoidCallback, c_void_p]
    lib.mblink_tray_set_menu_callback.restype = c_int
    lib.mblink_tray_set_menu_callback.argtypes = [H, MBlinkCallback, c_void_p]
    lib.mblink_set_size.restype = c_int
    lib.mblink_set_size.argtypes = [H, c_int, c_int]
    lib.mblink_get_size.restype = c_int
    lib.mblink_get_size.argtypes = [H, POINTER(c_int), POINTER(c_int)]
    lib.mblink_set_position.restype = c_int
    lib.mblink_set_position.argtypes = [H, c_int, c_int]
    lib.mblink_get_position.restype = c_int
    lib.mblink_get_position.argtypes = [H, POINTER(c_int), POINTER(c_int)]
    lib.mblink_set_min_size.restype = c_int
    lib.mblink_set_min_size.argtypes = [H, c_int, c_int]
    lib.mblink_set_max_size.restype = c_int
    lib.mblink_set_max_size.argtypes = [H, c_int, c_int]
    lib.mblink_minimize.restype = c_int
    lib.mblink_minimize.argtypes = [H]
    lib.mblink_maximize.restype = c_int
    lib.mblink_maximize.argtypes = [H]
    lib.mblink_restore.restype = c_int
    lib.mblink_restore.argtypes = [H]
    lib.mblink_show.restype = c_int
    lib.mblink_show.argtypes = [H]
    lib.mblink_hide.restype = c_int
    lib.mblink_hide.argtypes = [H]
    lib.mblink_set_fullscreen.restype = c_int
    lib.mblink_set_fullscreen.argtypes = [H, c_bool]
    lib.mblink_set_resizable.restype = c_int
    lib.mblink_set_resizable.argtypes = [H, c_bool]
    lib.mblink_set_borderless.restype = c_int
    lib.mblink_set_borderless.argtypes = [H, c_bool]
    lib.mblink_set_always_on_top.restype = c_int
    lib.mblink_set_always_on_top.argtypes = [H, c_bool]

    # UI 加载
    lib.mblink_load_html.restype = c_int
    lib.mblink_load_html.argtypes = [H, c_char_p]
    lib.mblink_load_html_file.restype = c_int
    lib.mblink_load_html_file.argtypes = [H, c_char_p]
    lib.mblink_eval_js.restype = c_int
    lib.mblink_eval_js.argtypes = [H, c_char_p]
    lib.mblink_eval_module.restype = c_int
    lib.mblink_eval_module.argtypes = [H, c_char_p, c_char_p]
    lib.mblink_load_js_file.restype = c_int
    lib.mblink_load_js_file.argtypes = [H, c_char_p]
    lib.mblink_load_bytecode.restype = c_int
    lib.mblink_load_bytecode.argtypes = [H, c_void_p, c_size_t]
    lib.mblink_compile_resources.restype = c_int
    lib.mblink_compile_resources.argtypes = [c_char_p, c_char_p, c_char_p]
    lib.mblink_load_resource_file.restype = c_int
    lib.mblink_load_resource_file.argtypes = [
        c_char_p, c_char_p, c_char_p,
        POINTER(c_void_p), POINTER(c_size_t), POINTER(c_uint32)
    ]
    lib.mblink_mount_resource_package.restype = c_int
    lib.mblink_mount_resource_package.argtypes = [H, c_char_p, c_char_p, c_char_p]

    # 函数绑定
    lib.mblink_bind.restype = c_int
    lib.mblink_bind.argtypes = [H, c_char_p, MBlinkCallback, c_void_p]
    lib.mblink_unbind.restype = None
    lib.mblink_unbind.argtypes = [H, c_char_p]

    # 事件回调
    lib.mblink_on_resize.restype = c_int
    lib.mblink_on_resize.argtypes = [H, MBlinkResizeCallback, c_void_p]
    lib.mblink_on_close_request.restype = c_int
    lib.mblink_on_close_request.argtypes = [H, MBlinkBoolCallback, c_void_p]
    lib.mblink_on_close.restype = c_int
    lib.mblink_on_close.argtypes = [H, MBlinkVoidCallback, c_void_p]
    lib.mblink_on_focus.restype = c_int
    lib.mblink_on_focus.argtypes = [H, MBlinkVoidCallback, c_void_p]
    lib.mblink_on_blur.restype = c_int
    lib.mblink_on_blur.argtypes = [H, MBlinkVoidCallback, c_void_p]
    lib.mblink_on_update.restype = c_int
    lib.mblink_on_update.argtypes = [H, MBlinkUpdateCallback, c_void_p]

    # 事件发送
    lib.mblink_emit.restype = c_int
    lib.mblink_emit.argtypes = [H, c_char_p, c_char_p]

    lib.mblink_observe_set_callback.restype = c_int
    lib.mblink_observe_set_callback.argtypes = [H, MBlinkObserveCallback, c_void_p]
    lib.mblink_observe_console_json.restype = c_int
    lib.mblink_observe_console_json.argtypes = [H, POINTER(c_void_p)]
    lib.mblink_observe_errors_json.restype = c_int
    lib.mblink_observe_errors_json.argtypes = [H, POINTER(c_void_p)]
    lib.mblink_observe_lifecycle_json.restype = c_int
    lib.mblink_observe_lifecycle_json.argtypes = [H, POINTER(c_void_p)]
    lib.mblink_observe_clear.restype = c_int
    lib.mblink_observe_clear.argtypes = [H, c_int]

    # 状态创建
    lib.mblink_state_create_null.restype = c_int
    lib.mblink_state_create_null.argtypes = [H, c_char_p]
    lib.mblink_state_create_bool.restype = c_int
    lib.mblink_state_create_bool.argtypes = [H, c_char_p, c_bool]
    lib.mblink_state_create_int.restype = c_int
    lib.mblink_state_create_int.argtypes = [H, c_char_p, c_int64]
    lib.mblink_state_create_double.restype = c_int
    lib.mblink_state_create_double.argtypes = [H, c_char_p, c_double]
    lib.mblink_state_create_string.restype = c_int
    lib.mblink_state_create_string.argtypes = [H, c_char_p, c_char_p]
    lib.mblink_state_create_array.restype = c_int
    lib.mblink_state_create_array.argtypes = [H, c_char_p]
    lib.mblink_state_create_object.restype = c_int
    lib.mblink_state_create_object.argtypes = [H, c_char_p]
    lib.mblink_state_create_json.restype = c_int
    lib.mblink_state_create_json.argtypes = [H, c_char_p, c_char_p]

    # 状态查询
    lib.mblink_state_exists.restype = c_bool
    lib.mblink_state_exists.argtypes = [H, c_char_p]
    lib.mblink_state_type.restype = c_int
    lib.mblink_state_type.argtypes = [H, c_char_p]
    lib.mblink_state_delete.restype = None
    lib.mblink_state_delete.argtypes = [H, c_char_p]

    # 状态读取
    lib.mblink_state_get_bool.restype = c_bool
    lib.mblink_state_get_bool.argtypes = [H, c_char_p]
    lib.mblink_state_get_int.restype = c_int64
    lib.mblink_state_get_int.argtypes = [H, c_char_p]
    lib.mblink_state_get_double.restype = c_double
    lib.mblink_state_get_double.argtypes = [H, c_char_p]
    lib.mblink_state_get_string.restype = c_char_p
    lib.mblink_state_get_string.argtypes = [H, c_char_p]
    lib.mblink_state_get_length.restype = c_int
    lib.mblink_state_get_length.argtypes = [H, c_char_p]
    lib.mblink_state_get_json.restype = c_char_p
    lib.mblink_state_get_json.argtypes = [H, c_char_p]
    lib.mblink_state_get_at.restype = c_char_p
    lib.mblink_state_get_at.argtypes = [H, c_char_p, c_int]
    lib.mblink_state_get_key.restype = c_char_p
    lib.mblink_state_get_key.argtypes = [H, c_char_p, c_char_p]

    # 状态写入
    lib.mblink_state_set_null.restype = c_int
    lib.mblink_state_set_null.argtypes = [H, c_char_p]
    lib.mblink_state_set_bool.restype = c_int
    lib.mblink_state_set_bool.argtypes = [H, c_char_p, c_bool]
    lib.mblink_state_set_int.restype = c_int
    lib.mblink_state_set_int.argtypes = [H, c_char_p, c_int64]
    lib.mblink_state_set_double.restype = c_int
    lib.mblink_state_set_double.argtypes = [H, c_char_p, c_double]
    lib.mblink_state_set_string.restype = c_int
    lib.mblink_state_set_string.argtypes = [H, c_char_p, c_char_p]
    lib.mblink_state_set_json.restype = c_int
    lib.mblink_state_set_json.argtypes = [H, c_char_p, c_char_p]


    # 数组操作
    lib.mblink_state_array_push.restype = c_int
    lib.mblink_state_array_push.argtypes = [H, c_char_p, c_char_p]
    lib.mblink_state_array_push_int.restype = c_int
    lib.mblink_state_array_push_int.argtypes = [H, c_char_p, c_int64]
    lib.mblink_state_array_push_double.restype = c_int
    lib.mblink_state_array_push_double.argtypes = [H, c_char_p, c_double]
    lib.mblink_state_array_push_string.restype = c_int
    lib.mblink_state_array_push_string.argtypes = [H, c_char_p, c_char_p]
    lib.mblink_state_array_push_bool.restype = c_int
    lib.mblink_state_array_push_bool.argtypes = [H, c_char_p, c_bool]
    lib.mblink_state_array_pop.restype = c_int
    lib.mblink_state_array_pop.argtypes = [H, c_char_p]
    lib.mblink_state_array_shift.restype = c_int
    lib.mblink_state_array_shift.argtypes = [H, c_char_p]
    lib.mblink_state_array_unshift.restype = c_int
    lib.mblink_state_array_unshift.argtypes = [H, c_char_p, c_char_p]
    lib.mblink_state_array_remove.restype = c_int
    lib.mblink_state_array_remove.argtypes = [H, c_char_p, c_int]
    lib.mblink_state_array_clear.restype = c_int
    lib.mblink_state_array_clear.argtypes = [H, c_char_p]
    lib.mblink_state_array_set.restype = c_int
    lib.mblink_state_array_set.argtypes = [H, c_char_p, c_int, c_char_p]
    lib.mblink_state_array_set_int.restype = c_int
    lib.mblink_state_array_set_int.argtypes = [H, c_char_p, c_int, c_int64]
    lib.mblink_state_array_set_double.restype = c_int
    lib.mblink_state_array_set_double.argtypes = [H, c_char_p, c_int, c_double]
    lib.mblink_state_array_set_string.restype = c_int
    lib.mblink_state_array_set_string.argtypes = [H, c_char_p, c_int, c_char_p]

    # 对象操作
    lib.mblink_state_object_set.restype = c_int
    lib.mblink_state_object_set.argtypes = [H, c_char_p, c_char_p, c_char_p]
    lib.mblink_state_object_set_int.restype = c_int
    lib.mblink_state_object_set_int.argtypes = [H, c_char_p, c_char_p, c_int64]
    lib.mblink_state_object_set_double.restype = c_int
    lib.mblink_state_object_set_double.argtypes = [H, c_char_p, c_char_p, c_double]
    lib.mblink_state_object_set_string.restype = c_int
    lib.mblink_state_object_set_string.argtypes = [H, c_char_p, c_char_p, c_char_p]
    lib.mblink_state_object_set_bool.restype = c_int
    lib.mblink_state_object_set_bool.argtypes = [H, c_char_p, c_char_p, c_bool]
    lib.mblink_state_object_remove.restype = c_int
    lib.mblink_state_object_remove.argtypes = [H, c_char_p, c_char_p]
    lib.mblink_state_object_clear.restype = c_int
    lib.mblink_state_object_clear.argtypes = [H, c_char_p]

    # 数值/字符串操作
    lib.mblink_state_increment.restype = c_int
    lib.mblink_state_increment.argtypes = [H, c_char_p, c_double]
    lib.mblink_state_multiply.restype = c_int
    lib.mblink_state_multiply.argtypes = [H, c_char_p, c_double]
    lib.mblink_state_string_append.restype = c_int
    lib.mblink_state_string_append.argtypes = [H, c_char_p, c_char_p]
    lib.mblink_state_string_prepend.restype = c_int
    lib.mblink_state_string_prepend.argtypes = [H, c_char_p, c_char_p]

    # 监听
    lib.mblink_state_watch.restype = c_int
    lib.mblink_state_watch.argtypes = [H, c_char_p, MBlinkStateCallback, c_void_p]
    lib.mblink_state_unwatch.restype = None
    lib.mblink_state_unwatch.argtypes = [H, c_int]

    # 批量/队列
    lib.mblink_state_batch_begin.restype = None
    lib.mblink_state_batch_begin.argtypes = [H]
    lib.mblink_state_batch_end.restype = None
    lib.mblink_state_batch_end.argtypes = [H]
    lib.mblink_state_set_merge_mode.restype = None
    lib.mblink_state_set_merge_mode.argtypes = [H, c_bool]
    lib.mblink_process_queue.restype = c_int
    lib.mblink_process_queue.argtypes = [H]
    lib.mblink_queue_size.restype = c_int
    lib.mblink_queue_size.argtypes = [H]

    # 工具
    lib.mblink_free.restype = None
    lib.mblink_free.argtypes = [c_void_p]
    lib.mblink_copy_string.restype = c_void_p
    lib.mblink_copy_string.argtypes = [c_char_p]

    lib.mblink_last_error.restype = c_char_p
    lib.mblink_last_error.argtypes = []

    # ========== 共享 C 对象 (SharedObject) ==========
    SH = c_void_p  # MBlinkSharedHandle

    lib.mblink_shared_create.restype = SH
    lib.mblink_shared_create.argtypes = [H, c_char_p]
    lib.mblink_shared_destroy.restype = None
    lib.mblink_shared_destroy.argtypes = [SH]
